docs: delete .vscode

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,4 @@ _01_S32K144_ADC/include.bak
 _01_S32K144_ADC/Linker_Files.bak
 _01_S32K144_ADC/src.bak
 _01_S32K144_ADC/Startup_Code.bak
+/.vscode/
